<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_bienvenido"
            android:gravity="center"
            android:textSize="20sp"
            android:id="@+id/menu_bienvenido" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/menu_leccion"
            android:id="@+id/menu_leccion" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/menu_btn_test"
            android:id="@+id/button_test"
            android:onClick="doTest"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/menu_btn_ejercicio"
            android:id="@+id/button_ejercicio"
            android:onClick="doExercise"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/menu_btn_seguimiento"
            android:id="@+id/button_seguimiento"
            android:onClick="doFollow"/>
    </LinearLayout>

